file: Set activation URI for certain files only Drag&drop of native Google Drive files doesn't work correctly, because target path is used, which causes requests for HTTP backend and fails. The activation URI is used for drag&drop since some time ago. Recently, this behavior has been disabled for trash locations. This behavior seems to make sense for recent locations in order to allow dropping in applications, which are not based on GLib/GIO. It also makes sense for afpbrowse, dnssd, network, and smbbrowse backends when mounting and bookmarking. Let's set the activation URI only for the mentioned. This change should not affect Nemo links (i.e. desktop files and symlinks), which are handled by different codepath, it should affect only certain GVfs backends.

https://bugzilla.gnome.org/show_bug.cgi?id=768168